# project-dv25-4

./: README.md
.github/workflows/: publish.yml
coffeeData/: README.md  git_log.txt  observablehq.config.js  package-lock.json
coffeeData/env/: python-reqs.txt
coffeeData/src/: CQI.md  index.md
coffeeData/src/components/: categoricalQualityChart.js  colorScheme.js  correlation_matrix.js  globalMap.js  qualityChart.js  radarChart.js
coffeeData/src/data/: df_arabica_clean.parquet  launches.csv.js  radarChart.json.py  score_params.parquet.py
coffeeData/src/data/pythonloaders/: data_cleaning.py  data_exploration.ipynb  df_1_arabica.csv  df_1_arabica.parquet  df_arabica_clean.parquet  process_tables_f.py  pyproject.toml  scraper_bot.py
coffeeData/src/styles/: checkboxes.css  coffee.css
report/: report.md
